fix wrong width calc for mobile themes

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -182,7 +182,7 @@ p a {
   &.mobile-light,
   &.mobile-dark {
     padding: 0;
-    width: 100vw;
+    width: calc(100vw - 1rem);
     margin-left: -1rem;
     margin-right: -1rem;
     max-width: 700px;
